# kinect4metal

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  METAL_IMPLEMENTATION.md  NOTICE  README.md  validate_metal_impl.sh
cmake_modules/: FindGLFW3.cmake  FindLibUSB.cmake  FindTurboJPEG.cmake  SetupLibfreenect2Threading.cmake
depends/: download_debs_trusty.sh  install_glfw.sh  install_libusb.sh  install_macos.sh  install_ubuntu.sh
doc/: Doxyfile.in  METAL_PIPELINE.md  TROUBLESHOOTING_MACOS.md  mainpage.dox
examples/: Protonect.cpp
examples/SwiftUI/KinectViewer/Sources/: ContentView.swift  KinectWrapper.swift
include/internal/libfreenect2/: metal_depth_packet_processor.h  rgb_packet_processor.h  threading.h
include/libfreenect2/: config.h  config.h.in  export.h  packet_pipeline.h
platform/macos/Entitlements/: Protonect.entitlements
platform/macos/Resources/: Info.plist.in
scripts/: full_build_test.sh  test_integration.sh  verify_build.sh
src/: libfreenect2.cpp  metal_depth_packet_processor.cpp  metal_depth_packet_processor.mm  metal_depth_processor_objc.h  opencl_depth_packet_processor.cpp  opencl_kde_depth_packet_processor.cpp  packet_pipeline.cpp  vt_rgb_packet_processor.cpp
src/metal/: depth_processing.air  depth_processing.metal
tasks/: 00_master_macos_pivot.yaml  phase0_project_rebrand.yaml  phase1_macos_infrastructure.yaml  phase2_metal_depth_processing.yaml  phase3_cleanup_linux_windows.yaml  phase4_documentation_examples.yaml  phase5_testing_validation.yaml
tests/: CMakeLists.txt  test_depth_tables.cpp  test_registration.cpp
tools/streamer_recorder/: README.md
tools/streamer_recorder/blender_viewer/scripts/: main.py
